# SwagDigitClassifier3000

./: .gitignore  pyproject.toml
src/swagdigitclassifier3000/: digits_par_jean-michel_version_0.3b.ipynb  finalized_datad_model.sav  swagDC3000.py
src/swagdigitclassifier3000/templates/: index.html
